@@ -1,3 +1,5 @@
+	* fix memory allocation issue (virtual addres space waste) on windows
+
 0.16.11 release
 
 	* fix web seed URL double escape issue
